build: use correct layout for a Python namespace package
PDM does not properly handle the combination of using a src/ directory
with a namespace package and fails to build the package properly. The
filesystem layout has been adjusted to reflect this:

  `src/feeph/i2c/` -> `feeph/i2c/`

With this modified layout the build will work properly and mypy is able to
find all relevant files.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,7 @@ build-backend = "pdm.backend"
 profile           = "black"
 line_length       = 250
 multi_line_output = 7
-src_paths         = ["src", "tests"]
+src_paths         = ["feeph", "tests"]
 
 # https://pypi.org/project/autopep8/
 [tool.autopep8]
@@ -79,7 +79,7 @@ filename = "requirements.txt"
 groups = ["default", "test"]
 
 [tool.pdm.build]
-includes = ["src/"]
+includes = ["feeph/"]
 source-includes = ["tests/"]
 
 [tool.pdm.dev-dependencies]
