--- a/tox.ini
+++ b/tox.ini
@@ -53,13 +53,14 @@ extend-ignore   = E221,E241
 [testenv:lint]
 description = lint code (flake8)
 deps = -r requirements.txt
-commands = flake8 {posargs:src tests}
+commands = flake8 {posargs:feeph tests}
 
 [testenv:type]
 description = check type hints
 deps = -r requirements.txt
 commands =
-    mypy {posargs:src tests}
+    mypy --namespace-packages -p feeph.i2c
+    mypy {posargs:tests}
 
 ; code is incompatible with Python 3.9 due to type hints
 ; (it could be fixed by changing the type hints but we won't)
