fix: update package dependencies
Remove 'adafruit-board-toolkit' since we don't actually need it.

Replace 'adafruit-circuitpython-busdevice' with 'adafruit-blinka' since we
no longer need I2CDevice(). Unfortunately this doesn't really save anything
since blinka depends on busdevice. But it makes it a little clearer what
our own dependencies are and removes one layer of circular dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,7 @@ authors = [
     {name = "Feeph Aifeimei", email = "55798703+feeph@users.noreply.github.com"},
 ]
 dependencies = [
-    "adafruit-board-toolkit~=1.1",
-    "adafruit-circuitpython-busdevice~=5.2",
+    "adafruit-blinka~=8.46",
     "gpiod~=2.2",
     "RPI-GPIO~=0.7",
 ]
