--- a/pdm.toml
+++ b/pdm.toml
@@ -1,5 +1,9 @@
-[python]
-path = "/home/thomas/github/libi2c-python/.venv/bin/python"
+#
+# use pdm config to see effective values
+#
+# documentation:
+#  - https://pdm-project.org/latest/reference/configuration/
+#
 
 [strategy]
 save = "compatible"
