--- a/.github/workflows/validate-code.yaml
+++ b/.github/workflows/validate-code.yaml
@@ -63,7 +63,7 @@ jobs:
         run: |
           # since this is a namespace package we must instruct mypy to scan
           # the code as a namespace package; it won't work if we scan files
-          pdm run mypy -p feeph.ads1xxx
+          pdm run mypy -p feeph.i2c
           # example scripts and tests can be scanned as files
           if [[ -n $CONTRIB_FILES ]] ; then
             pdm run mypy $CONTRIB_FILES
