chore: sync templated files to newest template version
https://github.com/feeph/pypackage-template/releases/tag/v0.2.1

--- a/tox.ini
+++ b/tox.ini
@@ -36,8 +36,6 @@ env_list =
 ; https://pytest-cov.readthedocs.io/en/latest/tox.html
 [coverage:run]
 branch = True
-omit =
-  tests/test_physical_device.py
 
 [coverage:report]
 fail_under = 90
@@ -52,15 +50,20 @@ extend-ignore   = E221,E241
 
 [testenv:lint]
 description = lint code (flake8)
-deps = -r requirements.txt
-commands = flake8 {posargs:feeph tests}
+deps =
+    --global-option="$(python-config --includes)" -r requirements.txt
+    --global-option="$(python-config --includes)" -r requirements-dev.txt
+commands =
+    flake8 {posargs:feeph examples/ tests/}
 
 [testenv:type]
 description = check type hints
-deps = -r requirements.txt
+deps =
+    --global-option="$(python-config --includes)" -r requirements.txt
+    --global-option="$(python-config --includes)" -r requirements-dev.txt
 commands =
-    mypy --namespace-packages -p feeph.i2c
-    mypy {posargs:tests}
+    mypy -p feeph.i2c
+    mypy {posargs:examples/ tests/}
 
 ; code is incompatible with Python 3.9 due to type hints
 ; (it could be fixed by changing the type hints but we won't)
@@ -72,19 +75,23 @@ depends =
     coverage_report: py310,py311,312
 set_env =
   VIRTUALENV_DISCOVERY = pyenv
-deps = -r requirements.txt
+deps =
+    --global-option="$(python-config --includes)" -r requirements.txt
+    --global-option="$(python-config --includes)" -r requirements-dev.txt
 # generate a coverage report but do not mesurements and do not fail
 # (we will combine all measurements into a single report later on)
-commands = pytest --cov --cov-append --cov-report= --cov-fail-under=0 tests {posargs}
+commands =
+    pytest --cov=feeph.i2c --cov-append --cov-report= --cov-fail-under=0 {posargs: tests/}
 
 [testenv:coverage_clean]
 deps = coverage
 skip_install = true
-commands = coverage erase
+commands =
+    coverage erase
 
 [testenv:coverage_report]
 deps = coverage
 skip_install = true
 commands =
-    coverage report
+    coverage report --show-missing
     coverage html
