--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,35 +1,42 @@
+# quickstart:
+#   pdm install
+#   pdm run pytest
+
+# dependencies
+#   - use `pdm add <package>` and `pdm remove <package>` to manage dependencies
+#   - use `pdm add -d -G dev <packag>` to add a dev dependency
+#   - use `pdm update --update-all` to update dependencies
+#   - use `pdm install` to install dependencies
+
+# usage:
+#   - use `pdm run <pythonfile>` to execute code
+#   - use `pdm run pytest` to perform unit tests
+
 # line lengths:
 #   - Excessive line lengths aren't good. But rather then automatically
 #     breaking them and turning into vertical blocks we want to see the
 #     nastiness sticking out prominently.
-#
-# black:
-#   - If the question is "Black?" the answer is "No!"
-#   - We use autopep8 to confirm compliance with PEP8, going beyond that
-#     is not necessary. If you want to apply black, then fine, go ahead.
-#     But we're not going to enforce or encourage it.
-
-# documentation:
-# https://pdm-project.org/latest/usage/config/
 
 [project]
-# PEP 621 project metadata
-# https://www.python.org/dev/peps/pep-0621
 name = "feeph.i2c"
 version = "0.7.3"
 description = "abstraction layer for the I²C bus (incl. simulation for testing)"
 authors = [
     {name = "Feeph Aifeimei", email = "55798703+feeph@users.noreply.github.com"},
 ]
+requires-python = ">=3.10,<3.13"
 dependencies = [
     "adafruit-blinka~=8.46",
     "gpiod~=2.2",
     "RPI-GPIO~=0.7",
 ]
-requires-python = ">=3.10,<3.13"
 readme = "README.md"
 license = {text = "GPL-3.0-or-later"}
-keywords = ["i2c", "smbus"]
+repository = "https://github.com/feeph/libi2c-python/"
+keywords = [
+    "i2c",
+    "smbus",
+]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
@@ -48,7 +55,6 @@ repository = "https://github.com/feeph/libi2c-python"
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
-#backend-path = ["src"]
 
 # -------------------------------------------------------------------------
 # tooling
@@ -61,7 +67,7 @@ build-backend = "pdm.backend"
 profile           = "black"
 line_length       = 250
 multi_line_output = 7
-src_paths         = ["feeph", "tests"]
+src_paths         = ["feeph/", "tests/"]
 
 # https://pypi.org/project/autopep8/
 [tool.autopep8]
@@ -72,28 +78,44 @@ in-place = true
 [tool.pdm]
 distribution = true
 
-# automatically update requirements.txt on `pdm lock`
+# automatically update requirements.txt and requirements-dev.txt
+# on `pdm lock`
+
 [[tool.pdm.autoexport]]
 filename = "requirements.txt"
-groups = ["default", "test"]
+groups = ["default"]
+
+[[tool.pdm.autoexport]]
+filename = "requirements-dev.txt"
+groups = ["dev", "tools"]
 
 [tool.pdm.build]
 includes = ["feeph/"]
 source-includes = ["tests/"]
 
 [tool.pdm.dev-dependencies]
-test = [
+dev = [
+]
+tools = [
     "autopep8     ~= 2.2",
+    "copier       ~= 9.3",
     "flake8       ~= 7.0",
     "mypy         ~= 1.10",
+    "pylint       ~= 3.2",
     "pytest-cov   ~= 5.0",
     "pytest-sugar ~= 1.0",
 ]
-tox = []
-dev = []
-docs = []
-tests = []
 
-# use <CONFIG_ROOT>/config.toml (typically ~/.config/pdm/config.toml)
-# to provide repository credentials when publishing from local machine
-# (see https://pdm-project.org/en/latest/usage/config/ for details)
+# during development: fetch all packages in our namespace from TestPyPI
+#
+# this config is used exclusively by pdm and has no impact on regular
+# consumers using `pip install <package>` to install the package
+[[tool.pdm.source]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+include_packages = ["feeph-*"]
+
+[tool.pylint."MESSAGES CONTROL"]
+fail-under = 8
+max-line-length = 250
+disable = "no-else-return,use-list-literal"
