test: update 'scripts/run_tests' to generate coverage/lcov.info

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,13 +97,14 @@ source-includes = ["tests/"]
 dev = [
 ]
 tools = [
-    "autopep8     ~= 2.2",
-    "copier       ~= 9.3",
-    "flake8       ~= 7.0",
-    "mypy         ~= 1.10",
-    "pylint       ~= 3.2",
-    "pytest-cov   ~= 5.0",
-    "pytest-sugar ~= 1.0",
+    "autopep8      ~= 2.2",
+    "copier        ~= 9.3",
+    "coverage-lcov ~= 0.3",
+    "flake8        ~= 7.0",
+    "mypy          ~= 1.10",
+    "pylint        ~= 3.2",
+    "pytest-cov    ~= 5.0",
+    "pytest-sugar  ~= 1.0",
 ]
 
 # during development: fetch all packages in our namespace from TestPyPI
