--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,7 @@ tools = [
     "autopep8      ~= 2.2",
     "copier        ~= 9.3",
     "coverage-lcov ~= 0.3",
+    "coveralls     ~= 4.0",
     "flake8        ~= 7.0",
     "mypy          ~= 1.10",
     "pylint        ~= 3.2",
