--- a/.github/workflows/validate-code.yaml
+++ b/.github/workflows/validate-code.yaml
@@ -7,7 +7,7 @@
 name: verify pull request
 
 on:
-  push:
+  pull_request:
 
 # our tox configuration leverages pyenv to test on multiple Python versions.
 # It is unclear if we can leverage actions/setup-python@v4 to do the same.
@@ -68,6 +68,16 @@ jobs:
           if [[ -n $CONTRIB_FILES ]] ; then
             pdm run mypy $CONTRIB_FILES
           fi
+      - name: generate coverage report
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          pdm run coverage run --source=feeph.i2c -m pytest tests/
+          pdm run coveralls
+          mkdir -p coverage
+          pdm run coverage-lcov --output_file_path=coverage/lcov.info
+      - name: coveralls action
+        uses: coverallsapp/github-action@v2
   test:
     name: perform unit tests
     # wait on linting results; makes no sense to test if the code is broken
