ci: simplify GitHub Action 'coveralls.yaml' (2)

--- a/.github/workflows/coveralls.yaml
+++ b/.github/workflows/coveralls.yaml
@@ -29,5 +29,9 @@ jobs:
       - name: generate coverage report
         run: |
           pdm run coverage run --source=feeph.i2c -m pytest tests/
+          # coveralls recognizes the presence of .coverage but claims there
+          # is nothing to report; creating a report in lcov format fixes that
+          mkdir -p coverage
+          pdm run coverage-lcov --output_file_path=coverage/lcov.info
       - name: coveralls action
         uses: coverallsapp/github-action@v2
