--- a/.github/workflows/coveralls.yaml
+++ b/.github/workflows/coveralls.yaml
@@ -27,11 +27,10 @@ jobs:
         run: |
           pdm install
       - name: generate coverage report
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           pdm run coverage run --source=feeph.i2c -m pytest tests/
-          pdm run coveralls
+          # coveralls recognizes the presence of .coverage but claims there
+          # is nothing to report; creating a report in lcov format fixes that
           mkdir -p coverage
           pdm run coverage-lcov --output_file_path=coverage/lcov.info
       - name: coveralls action
